@@ -1,22 +1,27 @@
 plugins {
-    id ("com.android.application")
-    id ("org.jetbrains.kotlin.android")
-    id ("com.google.gms.google-services")
-    id ("kotlin-parcelize")
-    id ("androidx.navigation.safeargs.kotlin")
-    id ("com.google.firebase.crashlytics")
-    id ("kotlin-kapt")
-    id ("com.google.firebase.firebase-perf")
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
+    id("com.google.gms.google-services")
+    id("com.google.devtools.ksp")
+    id("kotlin-parcelize")
+    id("androidx.navigation.safeargs.kotlin")
+    id("com.google.firebase.crashlytics")
+    id("kotlin-kapt")
+    id("com.google.firebase.firebase-perf")
+    id("com.google.dagger.hilt.android")
+    alias(libs.plugins.compose.compiler)
 }
+
+val ktlint by configurations.creating
 
 android {
     namespace = "com.binay.shaw.justap"
-    compileSdk = 33
+    compileSdk = 34
 
     defaultConfig {
         applicationId = "com.binay.shaw.justap"
         minSdk = 21
-        targetSdk = 33
+        targetSdk = 34
         versionCode = 7
         versionName = "2.1.2"
         vectorDrawables.useSupportLibrary = true
@@ -25,16 +30,25 @@ android {
 
     buildFeatures {
         viewBinding = true
+//        compose = true
+        buildConfig = true
     }
 
     buildTypes {
         getByName("release") {
             isMinifyEnabled = false
-            proguardFiles ( getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro" )
+            proguardFiles(
+                getDefaultProguardFile("proguard-android-optimize.txt"),
+                "proguard-rules.pro"
+            )
         }
         getByName("debug") {
             isDebuggable = true
         }
+    }
+
+    composeCompiler {
+        reportsDestination = layout.buildDirectory.dir("compose_compiler")
     }
 
     lint {
@@ -50,93 +64,128 @@ android {
     }
 }
 
+val ktlintCheck by tasks.registering(JavaExec::class) {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+}
+
+//tasks.check {
+//    dependsOn(ktlintCheck)
+// run -> ./gradlew ktlintCheck
+//}
+
+tasks.register<JavaExec>("ktlintFormat") {
+    group = LifecycleBasePlugin.VERIFICATION_GROUP
+    description = "Check Kotlin code style and format"
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args(
+        "-F",
+        "**/src/**/*.kt",
+        "**.kts",
+        "!**/build/**",
+    )
+    // run -> ./gradlew ktlintFormat
+}
+
 dependencies {
 
-    val lifecycleVersion = "2.6.1"
-    val cameraX = "1.3.0-alpha05"
-    val navVersion = "2.5.3"
-    val roomVersion = "2.5.1"
-    val lottieVersion = "5.2.0"
+    implementation(libs.androidx.core)
+    implementation(libs.appcompat)
+    implementation(libs.material)
+    implementation(libs.constraintlayout)
+    implementation(platform(libs.compose.bom))
+    implementation(libs.compose.material3)
+    implementation(libs.lifecycle.viewmodel.compose)
+    implementation(libs.compose.runtime.livedata)
+    implementation(libs.compose.ui)
+    implementation(libs.compose.ui.graphics)
+    implementation(libs.compose.ui.tooling)
+    implementation(libs.compose.ui.tooling.preview)
+    implementation(libs.compose.ui.text.google.fonts)
+    implementation(libs.activity.compose)
+    implementation(libs.material.icons)
+    implementation(libs.navigation.compose)
+    implementation(libs.hilt.android)
+    ksp(libs.hilt.compiler)
+    ksp(libs.hilt.android.compiler)
+    implementation(libs.hilt.navigation)
+    implementation(libs.work.runtime.ktx)
+    implementation(libs.datastore.preferences)
+    implementation(libs.lottie)
+    implementation(platform(libs.firebase.bom))
+    implementation(libs.firebase.auth.ktx)
+    implementation(libs.firebase.database.ktx)
+    implementation(libs.firebase.storage.ktx)
+    implementation(libs.firebase.messaging.ktx)
+    implementation(libs.firebase.crashlytics.ktx)
+    implementation(libs.firebase.perf)
+    implementation(libs.firebase.analytics.ktx)
+    implementation(libs.firebase.messaging.ktx)
+    implementation(libs.play.services.auth)
+    implementation(libs.room.runtime)
+    implementation(libs.room.ktx)
+    annotationProcessor(libs.room.compiler)
+    ksp(libs.room.compiler)
+    implementation(libs.coroutines.core)
 
-    //Default Pre-defined
-    implementation ("androidx.core:core-ktx:1.9.0")
-    implementation ("androidx.appcompat:appcompat:1.6.1")
-    implementation ("com.google.android.material:material:1.8.0")
-    implementation ("androidx.constraintlayout:constraintlayout:2.1.4")
+    implementation(libs.camera.camera2)
+    implementation(libs.camera.lifecycle)
+    implementation(libs.camera.view)
+    implementation(libs.camera.core)
+    implementation(libs.glide)
+    implementation(libs.circleimageview)
+    implementation(libs.coil.compose)
+    implementation(libs.alerter)
+    implementation(libs.colorpicker)
+    implementation(libs.play.core)
+    implementation(libs.timber)
+    implementation(libs.capturable)
+    implementation(libs.rebugger)
+    implementation(libs.truth)
+    implementation(libs.zxing)
 
-    //Test
-    testImplementation ("junit:junit:4.13.2")
-    androidTestImplementation ("androidx.test.ext:junit:1.1.5")
-    androidTestImplementation ("androidx.test.espresso:espresso-core:3.5.1")
-    testImplementation ("com.google.truth:truth:1.1.3")
-    androidTestImplementation ("androidx.test:runner:1.5.2")
-    androidTestImplementation ("androidx.test:rules:1.5.0")
+    implementation(libs.androidx.navigation.fragment)
 
+    implementation(libs.lifecycle.viewmodel.compose)
+    implementation(libs.lifecycle.runtime.compose)
+    implementation(libs.lifecycle.viewmodel.ktx)
+    implementation(libs.lifecycle.livedata.core)
+    implementation(libs.lifecycle.livedata)
+    implementation(libs.lifecycle.viewmodel)
+    androidTestImplementation(libs.androidx.ui.test.junit4)
+    debugImplementation(libs.androidx.ui.test.manifest)
+//
+//    lintChecks("com.slack.lint.compose:compose-lint-checks:1.3.1")
+//    ktlint("com.pinterest.ktlint:ktlint-cli:1.2.1") {
+//        attributes {
+//            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling.EXTERNAL))
+//        }
+//    }
+//    // ktlint(project(":custom-ktlint-ruleset")) // in case of custom ruleset
 
-    //Navigation
-    implementation ("androidx.navigation:navigation-fragment-ktx:$navVersion")
-    implementation ("androidx.navigation:navigation-ui-ktx:$navVersion")
+//    //Test
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso.core)
+    testImplementation(libs.truth)
+    androidTestImplementation(libs.androidx.runner)
+    androidTestImplementation(libs.androidx.rules)
 
-    //LottieFiles Animation
-    implementation ("com.airbnb.android:lottie:$lottieVersion")
+    implementation(libs.kotlinx.collections.immutable)
+//    //ML Kit
+    implementation(libs.barcode.scanning)
 
-    //ViewModel
-    implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion")
-
-    // LiveData
-    implementation ("androidx.lifecycle:lifecycle-livedata-ktx:$lifecycleVersion")
-
-    //Firebase
-    implementation (platform("com.google.firebase:firebase-bom:31.1.1"))
-    implementation ("com.google.firebase:firebase-auth-ktx:21.2.0")
-    implementation ("com.google.firebase:firebase-database-ktx:20.1.0")
-    implementation ("com.google.firebase:firebase-storage-ktx:20.1.0")
-    implementation ("com.google.android.gms:play-services-auth:20.4.1")
-    implementation ("com.google.firebase:firebase-crashlytics-ktx")
-    implementation ("com.google.firebase:firebase-analytics-ktx")
-    implementation ("com.google.firebase:firebase-perf-ktx")
-    implementation ("com.google.firebase:firebase-messaging-ktx:23.2.1")
-
-
-    //Room Database
-    implementation("androidx.room:room-runtime:$roomVersion")
-    annotationProcessor("androidx.room:room-compiler:$roomVersion")
-    kapt("androidx.room:room-compiler:$roomVersion")
-    implementation("androidx.room:room-ktx:$roomVersion")
-
-    //Coroutines
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4")
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
-    implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
-
-    //QR Code generator
-    implementation ("com.google.zxing:core:3.5.1")
-
-    //ML Kit
-    implementation ("com.google.mlkit:barcode-scanning:17.1.0")
-
-    //CameraX
-    implementation ("androidx.camera:camera-camera2:$cameraX")
-    implementation ("androidx.camera:camera-lifecycle:$cameraX")
-    implementation ("androidx.camera:camera-view:$cameraX")
-
-    //ImagePicker
-    implementation ("com.github.dhaval2404:imagepicker:2.1")
-    implementation ("androidx.legacy:legacy-support-v4:1.0.0")
-
-    //Glide
-    implementation ("com.github.bumptech.glide:glide:4.14.2")
-    annotationProcessor ("com.github.bumptech.glide:compiler:4.14.2")
-
-    //Circular ImageView
-    implementation ("de.hdodenhof:circleimageview:3.1.0")
-
-    //Custom AlertBar (Top)
-    implementation ("com.github.tapadoo:alerter:7.2.4")
-
-    //ColorPicker
-    implementation ("com.github.skydoves:colorpickerpreference:2.0.6")
-
-    // In-app update
-    implementation ("com.google.android.play:core:1.10.3")
+//    //ImagePicker
+    implementation(libs.imagepicker)
 }
